syntax = "proto3";
package eventmessages;
option go_package = "eventmessages";
option java_package = "com.factom.factomd.eventmessages";

import "eventmessages/sharedTypes.proto";
import "google/protobuf/timestamp.proto";

// ====  FACTOID BLOCK STRUCTURES =====
message FactoidBlock {
    bytes bodyMerkleRoot = 1;
    bytes previousKeyMerkleRoot = 2;
    bytes previousLedgerKeyMerkleRoot = 3;
    uint64 exchangeRate = 4;
    uint32 blockHeight = 5;
    repeated Transaction transactions = 6;
}

message Transaction {
    bytes transactionID = 1;
    uint32 blockHeight = 2;
    google.protobuf.Timestamp timestamp = 3;
    repeated TransactionAddress factoidInputs = 4;
    repeated TransactionAddress factoidOutputs = 5;
    repeated TransactionAddress entryCreditOutputs = 6;
    repeated RCD redeemConditionDataStructures = 7;
    repeated FactoidSignatureBlock signatureBlocks = 8;
}

message RCD {
    oneof rcd {
        RCD1 rcd1 = 1;
    }
}

message RCD1 {
    bytes publicKey = 1;
}

message FactoidSignatureBlock {
    repeated bytes signature = 1;
}

